# api-template-mongodb

./: README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yml
api/: __init__.py
api/base/endpoints/: demo_api.py  root.py  template_api.py
api/base/interfaces/mongo/: mongo_conn.py
api/base/models/: apimodels.py
