[tool.poetry]
name = "narwhal"
version = "0.1.0"
description = "FastAPI/MongoDB template"
authors = ["Nathan Wall <me@nathanwall.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.1.1"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
